fixing archive articles view , content wrapp and breadcrumb space

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -140,7 +140,6 @@ div.bs-docs-example blockquote{
 		padding-right: 0;
 	}
 
-	+ .wrapp-content,
 	+ #grid-top,
 	+ #grid-top2{
 		margin-top: 70px;
@@ -156,6 +155,9 @@ div.bs-docs-example blockquote{
 	}
 }
 
+.wrapp-content{
+	margin-top: 50px;
+}
 
 // Buttons
 .btn{
@@ -803,7 +805,6 @@ div.bs-docs-example blockquote{
 }
 .wrapp-breadcrumb{
 	background-color: @white;
-	margin-bottom: 50px;
 	.breadcrumb{
 		background-color: @white;
 	}
@@ -895,10 +896,11 @@ div.bs-docs-example blockquote{
 	-webkit-background-size: cover;
 	background-size: cover;
 	#grid-top3{
+		padding-bottom: 10%;
+		padding-top: 10%;
 		position: relative;
 		z-index: 3;
 	}
-
 }
 
 #footer{
@@ -1046,15 +1048,15 @@ dl.article-info{
 	margin-bottom: 20px;
 
 	dd{
+		margin-right: 10px;
+		padding: 0;
+
 		[class^="icon-"], [class*=" icon-"]{
 			display: none;
 		}
 		&:hover{
 			background-color: transparent;
 		}
-	}
-	dt + dd{
-		padding-left: 0;
 	}
 }
 
@@ -1206,7 +1208,6 @@ dl.article-info{
 				}
 				&.active {
 					> a {
-						background-color: transparent;
 						background-image: none;
 						color: @dropdownLinkColorActive;
 						filter:none;
